--- a/index.html
+++ b/index.html
@@ -20,5 +20,18 @@
         <a href="faq.html">FAQ</a>
       </nav>
     </header>
+
+    <footer>
+      <p>© 2025 TITE. All rights reserved.</p>
+      <nav>
+        <a href="index.html">HOME</a> | <a href="products.html">PRODUCTS</a> |
+        <a href="about.html">ABOUT</a> |
+        <a href="faq.html">FAQ</a>
+      </nav>
+      <p class="disclaimer">
+        Drink ng medyo responsible. This website is just for a machine project
+        :>
+      </p>
+    </footer>
   </body>
 </html>
