--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
         <a href="faq.html">FAQ</a>
       </nav>
     </header>
-
+    <!-- HERO SECTION -->
+    <section>hero</section>
+    <!-- HOW IT WORKS SECTION -->
+    <section>how it works</section>
+    <!-- REVIEWS SECTION -->
+    <section>reviews</section>
+    <!-- WHY US SECTION -->
+    <section>why us</section>
+    <main>home page</main>
+    <!-- FOOTER -->
     <footer>
       <p>© 2025 TITE. All rights reserved.</p>
       <nav>
