did a btn util class.

--- a/about.html
+++ b/about.html
@@ -22,13 +22,13 @@
     </header>
     <main>
       <!-- ABOUT HERO -->
-      <section></section>
+      <section>about hero</section>
       <!-- OUR STORY HAHAHAHA -->
-      <section></section>
+      <section>our sotry</section>
       <!-- MISSION AND VISION??? -->
-      <section></section>
+      <section>mission</section>
       <!-- CTA -->
-      <section></section>
+      <section><button class="btn">click</button></section>
     </main>
     <!-- FOOTER -->
     <footer>
