--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <!-- HEADER -->
     <header>
-      <h1><a href="index.html">TITE</a></h1>
+      <h1><a href="index.html">LYRA</a></h1>
       <!-- NAV LINKS -->
       <nav>
         <a href="index.html">HOME</a>
@@ -20,15 +20,56 @@
         <a href="faq.html">FAQ</a>
       </nav>
     </header>
-    <!-- HERO SECTION -->
-    <section>hero</section>
-    <!-- HOW IT WORKS SECTION -->
-    <section>how it works</section>
-    <!-- REVIEWS SECTION -->
-    <section>reviews</section>
-    <!-- WHY US SECTION -->
-    <section>why us</section>
-    <main>home page</main>
+    <main>
+      <!-- HERO SECTION -->
+      <section class="hero">
+        <h1>Welcome to LYRA</h1>
+        <p>tagline?</p>
+        <div>
+          <!-- goes to products page -->
+          <button>shop now</button>
+          <!-- goes to about page -->
+          <button>learn more</button>
+        </div>
+      </section>
+      <!-- HOW IT WORKS SECTION -->
+      <section>
+        <h2>How It Works</h2>
+        <!-- 3 cards -->
+        <div class="steps card-container">
+          <div class="step card">
+            <h3>Step 1</h3>
+            <h3>description</h3>
+          </div>
+          <div class="step card">
+            <h3>Step 1</h3>
+            <h3>description</h3>
+          </div>
+          <div class="step card">
+            <h3>Step 1</h3>
+            <h3>description</h3>
+          </div>
+        </div>
+      </section>
+      <!-- REVIEWS SECTION -->
+      <section>
+        <!-- hardcoded reviews -->
+        <h2>Reviews</h2>
+        <div class="review-container">
+          <blockquote>hatdog</blockquote>
+        </div>
+      </section>
+      <!-- WHY US SECTION -->
+      <section>
+        <h2>Why me?</h2>
+        <!-- 3 cards -->
+        <div class="card-container">
+          <div class="card">reason 1</div>
+          <div class="card">reason 2</div>
+          <div class="card">reason 3</div>
+        </div>
+      </section>
+    </main>
     <!-- FOOTER -->
     <footer>
       <p>© 2025 TITE. All rights reserved.</p>
