feat: hero section

--- a/index.html
+++ b/index.html
@@ -23,13 +23,18 @@
     <main>
       <!-- HERO SECTION -->
       <section class="hero">
-        <h1>Welcome to LYRA</h1>
-        <p>tagline?</p>
-        <div>
-          <!-- goes to products page -->
-          <button>shop now</button>
-          <!-- goes to about page -->
-          <button>learn more</button>
+        <div class="hero-content">
+          <h1 class="hero-title">Welcome to LYRA</h1>
+          <p class="tagline">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio,
+            nemo.?
+          </p>
+          <div class="cta-container">
+            <!-- goes to products page -->
+            <a class="btn" href="products.html">Shop Now</a>
+            <!-- goes to about page -->
+            <a class="btn-muted" href="about.html">Learn More</a>
+          </div>
         </div>
       </section>
       <!-- HOW IT WORKS SECTION -->
