feat: How it Works section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </nav>
     </header>
     <main>
-      <!-- HERO SECTION -->
+      <!-- HERO SECTION - DONE-->
       <section class="hero">
         <div class="hero-content">
           <h1 class="hero-title">Welcome to LYRA</h1>
@@ -37,22 +37,58 @@
           </div>
         </div>
       </section>
-      <!-- HOW IT WORKS SECTION -->
+      <!-- HOW IT WORKS SECTION - ONGOING -->
       <section>
-        <h2>How It Works</h2>
+        <h2 class="section-title">How It Works</h2>
         <!-- 3 cards -->
         <div class="steps card-container">
           <div class="step card">
-            <h3>Step 1</h3>
-            <h3>description</h3>
+            <div class="card-title">
+              <div class="card-icon">
+                <img
+                  src="public/icons/white-cart.svg"
+                  alt="cart icon"
+                  width="28px"
+                />
+              </div>
+              <h3>Browse Products</h3>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
+              accusamus.
+            </p>
           </div>
           <div class="step card">
-            <h3>Step 1</h3>
-            <h3>description</h3>
+            <div class="card-title">
+              <div class="card-icon">
+                <img
+                  src="public/icons/white-cart.svg"
+                  alt="cart icon"
+                  width="28px"
+                />
+              </div>
+              <h3>Browse Products</h3>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
+              accusamus.
+            </p>
           </div>
           <div class="step card">
-            <h3>Step 1</h3>
-            <h3>description</h3>
+            <div class="card-title">
+              <div class="card-icon">
+                <img
+                  src="public/icons/white-cart.svg"
+                  alt="cart icon"
+                  width="28px"
+                />
+              </div>
+              <h3>Browse Products</h3>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
+              accusamus.
+            </p>
           </div>
         </div>
       </section>
