--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
       </section>
       <!-- HOW IT WORKS SECTION - ONGOING -->
-      <section>
+      <section class="how-section">
         <h2 class="section-title">How It Works</h2>
         <!-- 3 cards -->
         <div class="steps card-container">
@@ -93,21 +93,86 @@
         </div>
       </section>
       <!-- REVIEWS SECTION -->
-      <section>
+      <section class="review-section">
         <!-- hardcoded reviews -->
-        <h2>Reviews</h2>
+        <h2 class="section-title">Reviews</h2>
         <div class="review-container">
-          <blockquote>hatdog</blockquote>
+          <div class="review-card">
+            <blockquote>
+              "this website changed my life. i came here to shop, but now im
+              questioning my whole existence."
+            </blockquote>
+            <p class="reviewer">- Yumi L.</p>
+          </div>
+          <div class="review-card">
+            <blockquote>
+              "this website changed my life. i came here to shop, but now im
+              questioning my whole existence."
+            </blockquote>
+            <p class="reviewer">- Yumi Acm</p>
+          </div>
+          <div class="review-card">
+            <blockquote>
+              "this website changed my life. i came here to shop, but now im
+              questioning my whole existence."
+            </blockquote>
+            <p class="reviewer">- Yumi A.</p>
+          </div>
         </div>
       </section>
       <!-- WHY US SECTION -->
-      <section>
-        <h2>Why me?</h2>
+      <section class="how-section">
+        <h2 class="section-title">Why Me?</h2>
         <!-- 3 cards -->
-        <div class="card-container">
-          <div class="card">reason 1</div>
-          <div class="card">reason 2</div>
-          <div class="card">reason 3</div>
+        <div class="steps card-container">
+          <div class="step card">
+            <div class="card-title">
+              <div class="card-icon">
+                <img
+                  src="public/icons/white-cart.svg"
+                  alt="cart icon"
+                  width="28px"
+                />
+              </div>
+              <h3>Browse Products</h3>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
+              accusamus.
+            </p>
+          </div>
+          <div class="step card">
+            <div class="card-title">
+              <div class="card-icon">
+                <img
+                  src="public/icons/white-cart.svg"
+                  alt="cart icon"
+                  width="28px"
+                />
+              </div>
+              <h3>Browse Products</h3>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
+              accusamus.
+            </p>
+          </div>
+          <div class="step card">
+            <div class="card-title">
+              <div class="card-icon">
+                <img
+                  src="public/icons/white-cart.svg"
+                  alt="cart icon"
+                  width="28px"
+                />
+              </div>
+              <h3>Browse Products</h3>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
+              accusamus.
+            </p>
+          </div>
         </div>
       </section>
     </main>
